feat: finished TicketUserAccess tests